# Nordic_nRF5340_SPI_loopback

./: .gitignore  CMakeLists.txt  README.md  REQUIREMENTS.md  app.overlay  prj.conf  sample.yaml  sysbuild.conf  verify-acceptance.sh  west.yml
.github/: copilot-instructions.md  daily-plan.md  requirements.md
.github/agents/: dev-workflow.agent.md
.github/skills/automated-testing/: SKILL.md
.github/skills/ble-web-bluetooth-debugger/: SKILL.md
.github/skills/code-refactoring/: SKILL.md
.github/skills/daily-iteration/: SKILL.md
.github/skills/tmux-multi-shell/: SKILL.md
.github/workflows/: build.yml
docs/: migration-handoff.md  skill-feedback.md
docs/daily-logs/: day-001.md  day-002.md  day-003.md  day-004-5.md  day-004.md  day-005.md  day-006.md  day-007.md  day-008.md  day-009.md  day-010.md  day-011.md
docs/reports/: ram-report-cpuapp.txt  rom-report-cpuapp.txt
reports/: ble-hr-log.txt
scripts/bsim-hrs/: build.sh  run.sh  swll.conf  swll.overlay
scripts/native-userchan/: ble-chrome-test.py  native.conf  run.sh
src/: ble_hrs.c  ble_hrs.h  main.c  spi_loopback.c  spi_loopback.h
tools/: ble-hr-test.html
